# Demand-Forecasting

./: Dockerfile  Dockerfile.datanode  Dockerfile.mlflow  Dockerfile.namenode  Makefile  README.md  docker-compose.yml  pyproject.toml
notebooks/: eda.ipynb
reports/: documentation.md  leaderboard.json
scripts/: check_config.py  init.sh  load_dataset.py
src/api/: main.py
src/config/: Cleaning config.yml  cleaning_config.yaml  training_config.yaml
src/features/: engineer.py
src/infrastructure/: reader.py  writer.py
src/models/: baseline_lr.py  ts_prophet.py  whale_lgbm.py  whale_rf.py  whale_xgb.py
src/models/artifacts/: baseline_linear.pkl  lightgbm.pkl  prophet_time_series.pkl  xgboost_best.pkl
src/pipeline/: Cleaning_pipeline.py  cleaning_pipeline.py  training_pipeline.py
src/processing/: Cleaner.py  cleaner.py
tests/: test_cleaner.py
