[project]
name = "demand-forecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.2",
    "fastapi>=0.136.1",
    "lightgbm>=4.6.0",
    "mlflow>=3.11.1",
    "plotly>=6.7.0",
    "prophet>=1.3.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pyspark==3.5.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "setuptools",
    "uvicorn>=0.46.0",
    "xgboost>=3.2.0",
]
